<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/title_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="590dp"
        android:fontFamily="@font/firasans_medium"
        android:text="@string/txt_title_create_acc_2nd"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/field_UF"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="230dp"
        android:background="@drawable/textplain_shape"
        android:ems="10"
        android:fontFamily="@font/firasans_light"
        android:hint="@string/hint_uf"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#686868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/field_city"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="130dp"
        android:background="@drawable/textplain_shape"
        android:ems="10"
        android:fontFamily="@font/firasans_light"
        android:hint="@string/hint_cidade"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#686868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/field_cep"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/textplain_shape"
        android:ems="10"
        android:fontFamily="@font/firasans_light"
        android:hint="@string/hint_cep"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mask="_____-___"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/field_district"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/textplain_shape"
        android:ems="10"
        android:fontFamily="@font/firasans_light"
        android:hint="@string/hint_bairro"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/field_address"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/textplain_shape"
        android:ems="10"
        android:fontFamily="@font/firasans_light"
        android:hint="@string/hint_endereco"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/field_complemento"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/textplain_shape"
        android:ems="10"
        android:fontFamily="@font/firasans_light"
        android:hint="@string/hint_complemento"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="TextContrastCheck" />

    <android.widget.Button
        android:id="@+id/btn_next_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/firasans_medium"
        android:text="@string/btn_finish_acc"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btn_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="330dp"
        android:layout_marginBottom="620dp"
        android:background="@drawable/btn_arrow_shape"
        android:contentDescription="@string/img_arrow_create_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>