<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp"
            app:contentPaddingLeft="40sp">

            <ImageView
                android:id="@+id/img_product_1"
                android:layout_width="250dp"
                android:layout_height="220dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/placeholder_product" />

            <TextView
                android:id="@+id/name_product_1"
                android:layout_width="263dp"
                android:layout_height="71dp"
                android:layout_marginTop="290sp"
                android:fontFamily="@font/firasans_medium"
                android:text="@string/product_name"
                android:textColor="@color/name_product"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price_product_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="380sp"
                android:layout_marginRight="20sp"
                android:fontFamily="@font/firasans_medium"
                android:text="@string/price_product"
                android:textColor="@color/name_product"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/see_more_product_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="430sp"
                android:layout_marginRight="10sp"
                android:fontFamily="@font/firasans_medium"
                android:text="@string/see_more_product"
                android:textColor="@color/blue"
                android:textSize="13sp" />

            <ImageButton
                android:id="@+id/btn_seemore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240sp"
                android:layout_marginTop="420sp"
                android:background="@drawable/btn_arrow_shape_right"
                android:contentDescription="@string/btn_arrow_seemore"
                app:srcCompat="@drawable/ic_arrow_right" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>