<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".HomeActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    /*----- NavigationView ------*/
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>

    /*----- NavigationView ------*/


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0sp"
                android:layout_height="57sp"
                android:background="@color/blue"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/MyToolbarStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu"
                app:subtitleTextColor="@color/white"
                app:title=" "
                app:titleTextColor="@color/white" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="0"
                    android:paddingBottom="10dp"
                    app:cardCornerRadius="6dp"
                    android:elevation="16sp"
                    android:background="@drawable/shadow"
                    app:contentPaddingLeft="30sp">

                    <TextView
                        android:id="@+id/textView_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/firasans_medium"
                        android:padding="6dp"
                        android:text="@string/name_user"
                        android:textColor="@color/name_product"
                        android:textSize="24dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300sp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="6dp"
                    android:elevation="16sp"
                    android:background="@drawable/shadow"
                    app:contentPaddingLeft="20sp">

                    <android.widget.Button
                        android:id="@+id/button"
                        android:layout_width="252dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="50sp"
                        android:layout_marginTop="220sp"
                        android:background="@drawable/buttonshapedelete"
                        android:text="@string/btn_delete_account"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/desc_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60sp"
                        android:layout_marginTop="20sp"
                        android:fontFamily="@font/firasans_medium"
                        android:text="@string/myorders"
                        android:textColor="@color/name_product"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/desc_marca"
                        android:layout_width="226dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60sp"
                        android:layout_marginTop="80sp"
                        android:fontFamily="@font/firasans_medium"
                        android:text="@string/conf_account"
                        android:textColor="@color/name_product"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50sp"
                        android:layout_marginTop="130sp"
                        android:fontFamily="@font/firasans_light"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/info_account" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50sp"
                        android:layout_marginTop="170sp"
                        android:fontFamily="@font/firasans_light"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/gen_address" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="340sp"
                        android:layout_marginTop="30sp"
                        app:srcCompat="@drawable/ic_arrow_blue" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="23sp"
                        app:srcCompat="@drawable/ic_clipboard_blue" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="83sp"
                        app:srcCompat="@drawable/ic_user_blue" />



                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_carrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/img_carrinho"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                app:srcCompat="@drawable/ic_shopping_bag_solid"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>