<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:paddingBottom="20dp"
                    app:cardCornerRadius="6dp"
                    app:contentPaddingLeft="30sp">


                    <ImageView
                        android:id="@+id/img_product_1"
                        android:layout_width="138dp"
                        android:layout_height="138dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        app:srcCompat="@drawable/placeholder_product" />

                    <TextView
                        android:id="@+id/name_product_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/firasans_medium"
                        android:text="@string/product_name_2"
                        android:textColor="@color/name_product"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/price_product_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        android:layout_marginTop="120dp"

                        android:fontFamily="@font/firasans_medium"
                        android:text="@string/price_product"
                        android:textColor="@color/name_product"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txt_carrinho_excluir"
                        android:layout_width="112dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="230dp"
                        android:layout_marginTop="120dp"
                        android:fontFamily="@font/firasans_medium"
                        android:text="@string/txt_excluir"
                        android:textColor="@color/blue"
                        android:textSize="20sp" />


                </androidx.cardview.widget.CardView>
            </LinearLayout>
</androidx.cardview.widget.CardView>